apps/base/homehub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homehub
  namespace: homehub
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: homehub
  type: ClusterIP
