apps/base/homehub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homehub
  namespace: homehub
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hh.h0melab.work
      secretName: homehub-tls-secret
  rules:
    - host: hh.h0melab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homehub
                port:
                  number: 5000
